--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
 <body>  
   <!-- Header -->
   <section id="header" class="bgAzul">
+
+
     <!-- Logo. Class "logoTexto" no va en mobile -->
-    <section id="logo" class="contenedor"> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
-      <a href="#">
+   <!-- <section id="logo" class="contenedor"> --> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
+     <!-- <a href="#">
         <img src="./img/logo.png" alt="Logo">
         <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
       </a>
@@ -56,7 +58,50 @@
     <section id="nav" class="contenedor navegador1">
       <ul class="top_menu">
         <ul id="navegador" class="top_menu"></ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="#">Home</a></li> -->
+
+ <!-- Virshi 18-05 Logo. Class "logoTexto" no va en mobile -->
+   <!-- <section id="logo" class="contenedor header-flex logoMobile"> --> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
+     <!-- <a href="#">
+        <img src="./img/logoHeader.png" alt="logo" class="logoBanner">
+        <img src="./img/logo@2x.png" alt="logo" class="logoBanner">
+        <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
+      </a>
+      <section class="navMobile">
+        <button id="hamburguer-btn" class="hamburguesa hamburguer-btn">
+        </button>
+      </section>
+    </section>
+    <section class="navegadores">      
+    <section id="navegadores" class="navegadores"> 
+      
+    -->
+    <header id="cabecera" class="sticky-header"> 
+      <section id="header" class="bgAzul">
+        <section id="logo" class="contenedor header-flex logoMobile"> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
+          <a href="#">
+            <img src="./img/logo@2x.png" alt="logo" class="logoBanner">
+            <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
+          </a>
+          <section class="navMobile">
+            <button id="hamburguer-btn" class="hamburguesa hamburguer-btn">
+            </button>
+          </section>
+        </section> 
+
+
+
+
+
+
+
+
+      <section id="nav" class="contenedor navegador1">      
+        <ul id="navegador" class="top_menu"> 
+          <li><a href="#">Home</a></li>
+
+
+
         <li><a href="#nosotros">Nosotros</a></li>
         <li><a href="#acciones">Acciones</a></li>
         <li><a href="#socios">Socios/as</a></li> 
@@ -64,15 +109,18 @@
         <li><a href="#contacto">Contacto</a></li>                        
       </ul>
     </section>
-  </section>
+      </section>
+      </section>
+        </section>
+    </header>
   <section id="portada" class="bgAzul bgBanner">
     <section class="contenedor">
       <section class="pieDeBanner gridContainerPorcentual">
         <section class="elementoPortada1">
           <h1>Asociación Cooperadora<br>Unidad Académica<br>Antonio Mentruyt</h1>
           <p>Por amor a Nuestra Escuela, a Nuestras Familias y a la Educación Pública</p>
-        </section>
-        <section class="elementoPortada2">
+          </section>
+          <section class="elementoPortada2">
           <img src="./img/rectangle-6@2x.png" alt="Logo Ensam">
         </section>
       </section>
@@ -229,7 +277,7 @@
               <a href="#" target="_blank"><button class="botonSecundario">Donar para esta campaña</button></a>
           </section>
           <section class="boxDoble">
-            <img src="./img/refaccionAulas.png" alt="campaña insumos">
+            <img src="./img/clases.jpg" alt="campaña insumos">
           </section>
           <section class="contenedorDoble">
             <section class="boxDoble">
@@ -241,7 +289,7 @@
                 <a href="#" target="_blank"><button class="botonSecundario">Donar para esta campaña</button></a>
             </section>
             <section class="boxDoble">
-              <img src="./img/clases.jpg" alt="Refacción de aulas">
+              <img src="./img/refaccionAulas.png" alt="Refacción de aulas">
             </section>
           </section>
         </section>
@@ -273,7 +321,8 @@
                 <input type="tel" id="celular" name="celular" placeholder="Ingrese su número de celular sin 0 ni 15"><br/><br/>
 
                 <label for="asunto">Asunto:</label><br/>
-                <select id="asunto" name="asunto">
+                <select id="asunto" name="asunto"> 
+                  <option value="consulta">Consulta General</option>
                   <option value="informacion">Información para asociarme</option>
                   <option value="aportes">Quiero hacer un aporte solidario</option>
                   <option value="coolaborar">Quiero ser colaborador/a</option>
@@ -335,5 +384,6 @@
   <!-- Scripts -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="./javascript/index.js"></script>
+  <script src="./javascript/btnHamburguesa.js"></script>
 </body>
 </html>
