texto cargo y doble columna con responsive

--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@
           <h2 class="textoAzulClaro">Nosotros</h2>
         </section>
         <section class="gridContenedorSimple">
-          <p class="textoGeneralNegro">Lorem ipsum dolor sit amet consectetur adipiscing elit habitant, vivamus eros metus mauris mattis tellus
-            himenaeos curae, sagittis diam iaculis ultricies tempor porta sodales. Auctor dui lectus donec quam odio
-            litora, senectus mauris libero facilisis nascetur pellentesque, phasellus praesent urna lobortis suscipit.
-            Aliquet porttitor habitasse conubia semper consequat a ornare at himenaeos odio iaculis turpis commodo
-            vivamus quis ultrices potenti ridiculus maecenas, euismod tempus non dictumst eu curabitur elementum vel
-            nulla habitant auctor mauris magnis sapien eget dis in.</p>
+          <p class="textoGeneralNegro">La Cooperadora es una asociación sin fines de lucro, conformada por un grupo de familias, estudiantes, profes, 
+          y el apoyo de los directivos, que trabajan voluntariamente, con el objetivo de mejorar las condiciones educativas.<br/>
+          La Asociación Cooperadora del ENSAM tiene una larga historia que data desde 1957, pasó por diversas situaciónes en las que hubo momentos de mucha actividad 
+          y otros en los que no tanto, hasta que se disolvió.<br/>Se logró, luego de mucho esfuerzo, que la comisión reorganizadora que se congregara a fines del 2017, pudiera por fin en el 2018 
+          conformar la nueva Asociación Cooperadora para el ENSAM.</p>
           <h4 class="celesteClaro textTitulares">Integrantes</h4> <!-- la clase TextTitulares tendra padding top/botoom -->
           <section class="textoNombresCargos textDosColumnas"> <!-- la clase TextDosColumnas style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2;" -->
             <p>
@@ -99,16 +98,16 @@
               <span class="cargos">Tesorera</span> María Gabriela González<br/>
               <span class="cargos">Vocal 1 titular</span> Micaela Dominguez Caetano<br/>
               <span class="cargos">Vocal 1 suplente</span> Christian Lopez<br/>
-              <span class="cargos">Vocal 2 titular</span> Mirtha Susana<br/>
+              <span class="cargos">Vocal 2 titular</span> Mirtha Susana DeNegri<br/>
               <span class="cargos">Vocal 2 suplente</span> Gloria Mabel Abelleira<br/>
             </p>
             <p>
               <span class="cargos">Vocal 3 titular</span> Laira Vallejos<br/>
               <span class="cargos">Vocal 3 suplente</span> Liliana Bogado<br/>
               <span class="cargos">Vocal 4 titular</span> Virginia Bernadette Annun<br/>
-              <span class="cargos">Vocal 4 suplente</span> Fernanda<br/>
+              <span class="cargos">Vocal 4 suplente</span> Fernanda Santillan<br/>
               <span class="cargos">Revisor de Cuentas docente</span> Claudia García<br/>
-              <span class="cargos">Revisor de Cuentas titular</span> Emilio<br/>
+              <span class="cargos">Revisor de Cuentas titular</span> Emilio López<br/>
               <span class="cargos">Revisor de Cuentas suplente</span> Juan Manuel Latorre<br/>	
             </p>
           </section>
@@ -190,7 +189,7 @@
               Aliquet porttitor habitasse conubia semper consequat a ornare at himenaeos odio iaculis turpis commodo
               vivamus quis ultrices potenti ridiculus maecenas, euismod tempus non dictumst eu curabitur elementum velit
               nulla habitant auctor mauris magnis sapien eget dis in.</p><br/><br/>
-              <a href="#" target="_blank"><button class="botonSecundario">Donar para esta campaña</button></a>
+              <a href="#" target="_blank" class="botonSecundario">Donar para esta campaña</a>
           </section>
           <section class="boxDoble">
             <img src="./img/camapana1.jpg" alt="campaña insumos">
@@ -204,7 +203,7 @@
                 Aliquet porttitor habitasse conubia semper consequat a ornare at himenaeos odio iaculis turpis commodo
                 vivamus quis ultrices potenti ridiculus maecenas, euismod tempus non dictumst eu curabitur elementum velit
                 nulla habitant auctor mauris magnis sapien eget dis in.</p><br/><br/>
-                <a href="#" target="_blank"><button class="botonSecundario">Donar para esta campaña</button></a>
+                <a href="#" target="_blank" class="botonSecundario">Donar para esta campaña</a>
             </section>
             <section class="boxDoble">
               <img src="./img/camapana2.jpg" alt="Refacción de aulas">
@@ -214,9 +213,9 @@
         <section class="gridContenedorSimple">
           <p class="textoGeneralBlanco">Para ver todas las campañas activas y finalizadas, así como todas las formas en las que podes colaborar, 
             ya sea desde tu profesión u oficio, hacé clic en el botón:</p><br/>
-            <a href="/camapanas.html" target="_blank"><button class="botonSecundario">Ver más</button></a>
+            <a href="/campanas.html" target="_blank" class="botonSecundario">Ver más</a>
         </section>
-      
+      </section>
     </section>
     <!-- contacto -->
     <section id="contacto" class="bgBlanco">
