--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Cada integrante tiene un rol activo y bien establecido sobre sus competencias en
         <section class="gridContenedorSimple">
           <p class="textoGeneralBlanco">Para ver todas las campañas activas y finalizadas, así como todas las formas en las que podes colaborar, 
             ya sea desde tu profesión u oficio, hacé clic en el botón:</p><br/>
-            <a href="/campanas.html" target="_blank" class="botonSecundario">Ver más</a>
+            <a href="./campanas.html" target="_blank" class="botonSecundario">Ver más</a>
         </section>
       </section>
     </section>
@@ -268,7 +268,7 @@ Cada integrante tiene un rol activo y bien establecido sobre sus competencias en
         
           <section class="boxDoble">
             <iframe width="100%" height="200" src="https://maps.google.com/maps?width=100%25&amp;height=200&amp;hl=en&amp;q=manuel%20Castro%20990,%20banfield,%20buenos%20aires+(Escuela%20Nacional%20Superior%20Antonio%20Mentruyt)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Mapa de Ruta</a></iframe><br />
-            <p class="textoGeneralNegro">acá otros datos de contacto<br/></p>
+            <p class="textoGeneralNegro"></p>
             <p class="textoGeneralNegro">Manuel Castro 990, Lomas de Zamora<br/>Buenos Aires, Argentina<br/>ensamcooperadora@gmail.com</p>
             <section class="redesSociales"> 
               <a href="mailto:ensamcooperadora@gmail.com" class="botonRedes"><i class="fi fi-rr-envelope"></i></a>
