--- a/index.html
+++ b/index.html
@@ -126,18 +126,24 @@
         <section class="gridContenedorSimple">
           <h2 class="textoCelesteClarito">Acciones</h2>
         </section>
+
         <section class="textDosColumnas textoGeneralBlanco">
+          <section class="contenedorDoble">
+
+            <section class="boxDoble">
           <h3 class="textoCelesteClaro">¿Qué hacemos?</h3>
           <p>
             La Asociación Cooperadora nos convoca para fortalecer y apoyar a nuestro querido ENSAM. Como miembros orgullosos de esta comunidad educativa, nos esforzamos por crear un entorno acogedor y brindar recursos de calidad a todas las personas que forman parte de nuestra escuela. Trabajamos en colaboración con directivos, docentes, familias, y estudiantes para mejorar la experiencia educativa y asegurar que cada individuo tenga oportunidades enriquecedoras de aprendizaje. Somos una gran familia unida por el objetivo común de hacer de nuestra escuela un lugar inspirador, acogedor y lleno de posibilidades. Fomentamos el sentimiento de pertenencia y animamos a todos y todas a participar activamente. Nos enorgullece formar parte del legado de la escuela pública y contribuir a la formación de futuras generaciones. Creemos en el poder transformador de la educación y en el impacto positivo que podemos lograr si aunamos nuestra fuerza. Nuestra escuela no es solo un edificio, es un hogar donde cultivamos el amor por el conocimiento, la solidaridad y el respeto. Unidos y unidas, construimos un futuro brillante para nuestros estudiantes y nuestra comunidad.
-          </p>
+          </p></section>
+          <section class="boxDoble">
           <h3 class="textoCelesteClaro">¿Cómo hacemos?</h3>
           <p>
             A través de actividades, eventos y proyectos, buscamos recaudar fondos y recursos para cubrir necesidades educativas, mejoras en la infraestructura y programas extracurriculares que enriquezcan la experiencia de nuestros estudiantes.
 Los fondos que administra la cooperadora provienen del pago de la cuota societaria, de la venta de cuadernos de comunicaciones, del canon que abona el concesionario del buffet, subsidios que a veces otorga el Estado y donaciones voluntarias; así como también de las actividades como ferias del plato, y otros eventos y proyectos que posibilitan el ingreso de dinero.
 Cada integrante tiene un rol activo y bien establecido sobre sus competencias en la cooperadora. Estas competencias se establecen desde el primer día, por medio del debate y la votación. Procuramos que la colaboración de los y las cooperadoras sea equitativa y liviana, para que el trabajo sea ameno y sobre todo se pueda llevar a cabo con disfrute y amor. Por ello el dialogo es nuestro principal recurso.
 
-          </p>
+          </p></section>
+          </section>
         </section>
       </section>
     </section>
