modales y politicas de privacidad

--- a/campanas.html
+++ b/campanas.html
@@ -64,7 +64,7 @@
   </header>
 
   <main>
-<!-- Preguntas Frecuentes -->
+<!-- Campañas -->
 <section id="campanasPage" class="bgBlanco">
     <section class="contenedor">
       <section class="gridContenedorSimple"> 
@@ -72,7 +72,7 @@
       </section>
       <section class="gridContenedorSimple">
 
-
+            <p>Página en construcción</p>
         
       </section>
     </section>
@@ -83,8 +83,8 @@
   <footer id="footer" role="contentinfo" class="bgAzul">
     <section class="contenedor">
       <section class="gridContenedorSimple">
-        <a href="/faq.html" class="linksFooter textoCelesteClarito">Preguntas Frecuentes</a>
-        <a href="#" class="linksFooter textoCelesteClarito">Política de Privacidad</a>
+        <a href="./faq.html" class="linksFooter textoCelesteClarito">Preguntas Frecuentes</a>
+        <a href="./politicas.html" class="linksFooter textoCelesteClarito">Política de Privacidad</a>
 
       </section>
     </section>
