--- a/faq.html
+++ b/faq.html
@@ -119,8 +119,8 @@
   <footer id="footer" role="contentinfo" class="bgAzul">
     <section class="contenedor">
       <section class="gridContenedorSimple">
-        <a href="/faq.html" class="linksFooter textoCelesteClarito">Preguntas Frecuentes</a>
-        <a href="#" class="linksFooter textoCelesteClarito">Política de Privacidad</a>
+        <a href="./faq.html" class="linksFooter textoCelesteClarito">Preguntas Frecuentes</a>
+        <a href="./politicas.html" class="linksFooter textoCelesteClarito">Política de Privacidad</a>
 
       </section>
     </section>
