--- a/faq.html
+++ b/faq.html
@@ -41,7 +41,7 @@
   <header id="cabecera" class="sticky-header"> 
     <section id="header" class="bgAzul">
       <section id="logo" class="contenedor header-flex logoMobile"> <!--la clase contenedor debe adaptarse a diferentes tamaños de pantallas -->
-        <a href="#">
+        <a href="./index.html">
           <img src="./img/logo@2x.png" alt="logo" class="logoBanner">
           <img src="./img/logotipoTexto.png" alt="Asociación Cooperadora Unidad Académica Antonio Mentruyt" class="logoTexto">
         </a>
