--- a/faq.html
+++ b/faq.html
@@ -121,7 +121,9 @@
       <section class="gridContenedorSimple">
         <a href="./faq.html" class="linksFooter textoCelesteClarito">Preguntas Frecuentes</a>
         <a href="./politicas.html" class="linksFooter textoCelesteClarito">Política de Privacidad</a>
-
+      </section>
+      <section>
+        <p class="credits"><br/>&copy; 2023 ASOCIACIÓN COOPERADORA UNIDAD ACADÉMICA ANTONIO MENTRUYT<br/><br/>|  <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcooperadoraensam.ar" target="_blank"> <img src="img/valid-html5.gif" alt="Validado"></a>  |</p>
       </section>
     </section>
   </footer>
