corrección bug cierre modal form

--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
   </header>
   <!-- Portada -->
   <section id="portada" class="bgAzul bgBanner"> <!--en esta clase va la imagen de fondo -->
-<<<<<<< HEAD
-    <section class="contenedor">
-=======
     <section class="contenedor contenedorPortada">
->>>>>>> virginia
       <section class="pieDeBanner gridContainerPorcentual"> 
         <section class="elementoPortada1"> <!--acá determinar tamaños y porcentajes según tamaño de pantallas 70/30 -->
           <h1 class="alignTextTop">Asociación Cooperadora<br/>Unidad Académica<br/>Antonio Mentruyt</h1>
@@ -277,7 +273,7 @@
               </form>
               <div id="modalContacto" class="modal">
                 <div class="modal-contenido">
-                  <span class="cerrar-modal botonSecundario">&times;</span> <br/>
+                  <span class="cerrar-modalForm botonSecundario">&times;</span> <br/>
                   <p>Su consulta se ha enviado correctamente.</p>
                 </div>
               </div>
